# aws-lambda-sidecar-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/aws-lambda-web-gateway/: .gitignore  README.md  template.yml
examples/aws-lambda-web-gateway/callee/: index.mjs
examples/aws-lambda-web-gateway/caller/: aws-lambda-sidecar.yaml  index.mjs
examples/hello_world/: README.md  template.yml
examples/hello_world/nodejs/: aws-lambda-sidecar.yaml  index.mjs
src/: config.rs  main.rs
