[package]
name = "aws-lambda-sidecar-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda-extension = "0.11.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "env-filter",
  "fmt",
] }
serde = "1.0"
serde_yaml = "0.9"
anyhow = "1.0.89"
futures = "0.3.31"
reqwest = "0.12.8"
